# prismatic-web-plugin

./: .coverage  .gitignore  LICENSE  PRISMATIC_ENGINE.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: PROCESS.md  architecture.md  astro-emdash-system.md  extending.md  from-scratch.md  usage.md
prismatic_web_plugin/: ingest.py
scripts/: prismatic-pre-push-hook.py
src/prismatic_web_plugin/: __init__.py  approval.py  astro_emdash.py  builder.py  distill.py  distill_generic.py  ingest.py  ingest_generic.py  orchestrator.py  synthesize.py  synthesize_generic.py
tests/: conftest.py  test_approval.py  test_astro_emdash.py  test_builder.py  test_distill.py  test_ingest.py  test_orchestrator.py  test_smoke.py  test_synthesize.py
