[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismatic-web-plugin"
version = "0.1.0"
description = "Turn any client's Website Content Gathering Framework into a deployed website via the Prismatic Engine agent swarm"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Michael Gulden", email = "mbgulden@gmail.com" },
]
keywords = ["website", "build", "agent", "orchestration", "prismatic-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
pwb = "prismatic_web_plugin.builder:main"

[project.urls]
"Source" = "https://github.com/mbgulden/prismatic-web-plugin"
"Issues" = "https://linear.app/growthwebdev/issue/GRO-2137"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/prismatic_web_plugin"]
branch = true
omit = [
    "src/prismatic_web_plugin/*_generic.py",
    "src/prismatic_web_plugin/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
